fixing layout issues with new project

--- a/src/components/webdev/webdev.scss
+++ b/src/components/webdev/webdev.scss
@@ -63,7 +63,7 @@
 
 
 
-    #webdev-img-angular,  #webdev-img-react, #webdev-img-api, #webdev-img-titbit, #webdev-img-aptly, #webdev-img-pokedex {
+    #webdev-img-angular, #webdev-img-spx,  #webdev-img-react, #webdev-img-api, #webdev-img-titbit, #webdev-img-aptly, #webdev-img-pokedex {
         max-width: 80%;
         position: relative;
         z-index: 3;
